# zero_wx_s52_migration_starter

./: AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  plan.md
apps/: CMakeLists.txt
apps/chart_standalone/: CMakeLists.txt  chart_standalone_main.cpp
docs/: api_cleanup_freeze.md  architecture.md  architecture_final.md  asset_path_policy.md  build_env.md  build_environment.md  code_rule.md  coding_rules.md  csp_entry_audit.md  golden_image_harness.md  headless_boundary_design.md  headless_candidates.md  lightweight_wx_types_audit.md  local_compile.md  migration_complete_verification.md  migration_report.md  must_drop.md  old_host_canvas_path_removal.md  public_api_freeze_manifest.txt  regression_scene_policy.md  resource_wx_types_audit.md  rewrite_required.md  s52_file_inventory.md  test_data_policy.md  ui_host_wx_types_audit.md  wx_include_audit.md  wxdc_path_removal.md  wxgcdc_path_removal.md  wxglcontext_path_removal.md  zero_wx_build_verification.md  zero_wx_rule_freeze.md  zero_wx_source_verification.md
include/marine_chart/chart_qt_host/: chart_host_widget.h
include/marine_chart/chart_runtime/: area_pattern_ir.h  area_renderer.h  display_priority_ir.h  feature_portrayal_ir.h  instruction_ir.h  line_renderer.h  line_style_ir.h  line_style_parser.h  open_chart.h  pattern_atlas_loader.h  point_renderer.h  point_symbol_atlas_loader.h  point_symbol_ir.h  portrayal_ir_debug_dump.h  portrayal_ir_ingestion.h  priority_sorter.h  runtime_palette_colors.h  runtime_render_frame.h  s57_dataset_ingestion.h  text_layout.h  (+2 more)
scripts/: local_build.ps1  local_smoke.ps1
skills/local_windows_build/: SKILL.md
skills/lookup_and_csp/: SKILL.md
skills/neutral_types/: SKILL.md
skills/portrayal_ir/: SKILL.md
skills/qrhi_rendering/: SKILL.md
skills/regression_policy/: SKILL.md
skills/repo_bootstrap/: SKILL.md
skills/s52_assets/: SKILL.md
skills/upstream_provenance/: SKILL.md
skills/wx_removal_audit/: SKILL.md
src/qt_host/: CMakeLists.txt  chart_host_widget.cpp
src/runtime/: CMakeLists.txt  area_pattern_ir.cpp  area_renderer.cpp  display_priority_ir.cpp  feature_portrayal_ir.cpp  instruction_ir.cpp  line_renderer.cpp  line_style_ir.cpp  line_style_parser.cpp  open_chart.cpp  pattern_atlas_loader.cpp  point_renderer.cpp  point_symbol_atlas_loader.cpp  point_symbol_ir.cpp  portrayal_ir_debug_dump.cpp  portrayal_ir_ingestion.cpp  priority_sorter.cpp  runtime_palette_colors.cpp  runtime_render_frame.cpp  s57_dataset_ingestion.cpp  text_layout.cpp  text_renderer.cpp  text_rule_ir.cpp
src/s52_core_headless/: CMakeLists.txt  area_portrayal_selection.cpp  chartsymbols_xml_loader.cpp  color_table_loader.cpp  csp_entry_audit.cpp  csp_minimal_bridge.cpp  csv_dictionary_loader.cpp  display_priority_selection.cpp  feature_attribute_adapter.cpp  headless_core_init.cpp  line_portrayal_selection.cpp  line_style_loader.cpp  lookup_index.cpp  lookup_key.cpp  lookup_raw_loader.cpp  module.cpp  neutral_config_loader.cpp  pattern_catalog_loader.cpp  point_portrayal_selection.cpp  portrayal_ir_pipeline.cpp  symbol_catalog_loader.cpp  text_rule_selection.cpp
state/: blocked.md  current_iteration.md  done.md
tasks/: 001-repo-bootstrap.md  002-agents-md-initial.md  003-plan-md-initial.md  004-coding-rules.md  005-build-environment.md  006-local-build-scripts.md  007-state-files-bootstrap.md  008-empty-smoke-build.md  009-upstream-license-audit.md  010-upstream-provenance-record.md  011-vendor-layout.md  012-import-chartsymbols-xml.md  013-import-s57attributes-csv.md  014-import-s57objectclasses-csv.md  015-import-symbol-assets.md  016-import-line-assets.md  017-import-pattern-assets.md  018-asset-path-policy.md  019-asset-presence-smoke.md  020-s52-file-inventory.md  021-wx-include-audit.md  022-lightweight-wx-types-audit.md  023-resource-wx-types-audit.md  024-ui-host-wx-types-audit.md  025-classify-headless-candidates.md  026-classify-rewrite-required.md  027-classify-must-drop.md  028-headless-boundary-design.md  029-zero-wx-rule-freeze.md  030-create-s52-core-headless-module.md  031-neutral-string-type.md  032-neutral-color-type.md  033-neutral-geometry-types.md  034-replace-wx-containers.md  035-neutral-config-loader.md  036-neutral-image-metadata.md  037-neutral-font-descriptor.md  038-remove-wxdc-paths.md  039-remove-wxgcdc-paths.md  040-remove-wxglcontext-paths.md  (+59 more)
test/: chart_qt_host_widget_smoke.cpp  chart_runtime_area_pattern_ir_smoke.cpp  chart_runtime_area_renderer_smoke.cpp  chart_runtime_display_priority_ir_smoke.cpp  chart_runtime_instruction_ir_smoke.cpp  chart_runtime_line_renderer_smoke.cpp  chart_runtime_line_style_ir_smoke.cpp  chart_runtime_line_style_parser_smoke.cpp  chart_runtime_open_chart_flow_smoke.cpp  chart_runtime_pattern_atlas_loader_smoke.cpp  chart_runtime_point_renderer_smoke.cpp  chart_runtime_point_symbol_atlas_loader_smoke.cpp  chart_runtime_point_symbol_ir_smoke.cpp  chart_runtime_portrayal_ir_debug_dump_smoke.cpp  chart_runtime_portrayal_ir_ingestion_smoke.cpp  chart_runtime_priority_sorter_smoke.cpp  chart_runtime_runtime_palette_colors_smoke.cpp  chart_runtime_runtime_render_frame_smoke.cpp  chart_runtime_s57_dataset_ingestion_smoke.cpp  chart_runtime_text_layout_smoke.cpp  chart_runtime_text_renderer_smoke.cpp  chart_runtime_text_rule_ir_smoke.cpp  compare_golden_image.cmake  run_regression_scene.ps1  s52_core_headless_area_portrayal_selection_smoke.cpp  s52_core_headless_csp_entry_audit_smoke.cpp  s52_core_headless_csp_minimal_bridge_smoke.cpp  s52_core_headless_display_priority_selection_smoke.cpp  s52_core_headless_feature_attribute_adapter_smoke.cpp  s52_core_headless_init_smoke.cpp  s52_core_headless_line_portrayal_selection_smoke.cpp  s52_core_headless_lookup_index_smoke.cpp  s52_core_headless_lookup_key_smoke.cpp  s52_core_headless_lookup_raw_smoke.cpp  s52_core_headless_mariner_settings_smoke.cpp  s52_core_headless_module_smoke.cpp  s52_core_headless_point_portrayal_selection_smoke.cpp  s52_core_headless_portrayal_ir_pipeline_smoke.cpp  s52_core_headless_rule_engine_smoke.cpp  s52_core_headless_text_rule_selection_smoke.cpp  (+15 more)
(+29 files in other folders)
